--- a/index.html
+++ b/index.html
@@ -1,49 +1,160 @@
 
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的网站</title>
-    <!-- 在这里添加你的CSS文件 -->
-    <!-- <link rel="stylesheet" href="styles.css"> -->
-</head>
-<body>
-    <header>
-        <h1>欢迎来到我的网站</h1>
-        <p>这里是一些介绍性文字。</p>
-    </header>
-    <nav>
-        <!-- 导航菜单 -->
-        <ul>
-            <li><a href="#">首页</a></li>
-            <li><a href="#">关于我们</a></li>
-            <li><a href="#">服务</a></li>
-            <li><a href="#">联系方式</a></li>
-        </ul>
-    </nav>
-    <main>
-        <!-- 主要内容 -->
-        <section>
-            <h2>章节标题</h2>
-            <p>这是一些示例文本，作为章节内容的一部分。</p>
-        </section>
-        <article>
-            <h2>文章标题</h2>
-            <p>这是另一段示例文本，代表一篇文章的内容。</p>
-        </article>
-    </main>
-    <aside>
-        <!-- 侧栏内容 -->
-        <h3>相关信息</h3>
-        <p>这里可以放置一些相关链接或广告等内容。</p>
-    </aside>
-    <footer>
-        <!-- 页脚 -->
-        <p>版权所有 ©️ 你的名字或公司名</p>
-    </footer>
-    <!-- 在这里添加你的JS文件 -->
-    <!-- <script src="scripts.js"></script> -->
-</body>
-</html>
+<html xmlns="http://www.w3.org/1999/xhtml" class="ui-mobile"><head runat="server"><base href="http://121203.szfric.com:9981/602wx/a.html?a=74DB437CE7444962A9A4886BDB2AC394">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<meta name="format-detection" content="telephone=no">
+		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+		<title>计量证书查询</title>
+
+    <!--<link rel="stylesheet" href="files/bootstrap.min.css" type="text/css" />-->
+	<link rel="stylesheet" href="files/jquery.mobile-1.4.5.min.css" type="text/css">
+	<link rel="stylesheet" href="files/jquery.mobile.icons-1.4.5.min.css " type="text/css">
+	<script type="text/javascript" src="files/jquery-1.8.3.min.js"></script>
+	<script src="files/jquery.mobile-1.4.5.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="files/jquery.json.js"></script>
+    <script type="text/javascript" language="javascript" src="files/UCML_JS_All_M.js"></script>
+    <script type="text/javascript" language="javascript" src="files/jsrule.js"></script>
+	<script type="text/javascript" language="javascript" src="files/initvalue.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="files/css/ucmlapp.css" id="ucmlApp">
+    <script type="text/javascript" language="javascript" src="files/jlzs.js?version=0"></script>
+
+
+<style type="text/css">
+.ui-input-btn
+{
+	background-color: #38c !important;
+    border-color: #38c !important;
+    color: #fff !important;
+    text-shadow: 0 1px 0 #059 !important;
+}
+</style>
+   	<script type="text/javascript" language="javascript">
+   	    var UCMLResourcePath="";
+   	    var UCMLLocalResourcePath="";
+   	    var BPOName="jlzs";
+   	    var VC_jlsjForm = null;
+var FUseMultiLanguage = false;
+var IsHTMLPage = true;
+var BPOIsJQMPage = true;
+var BPOPageTheme ="a";
+var BusinessData=[];
+BusinessData["BC_jlsj"]=[];
+BusinessData["OIDData"]=[["BC_jlsj",0,0,1]];
+BusinessData["FlowData"]=[];
+BusinessData["PropertyList"]=[];
+BusinessData["ResourceData"]=[];
+BusinessData["UCMLUserSystemInfo"]=[];
+
+var RecordCountInfo={};
+RecordCountInfo["BC_jlsj"]={StartPos:0,ReadCount:0,RecordCount:0,PageCount:0};
+var ServerProperty={};
+   	    function Init()
+   	    {
+             BusinessObject.open();
+   	    }
+   	    function PrepareExColumn(){}
+   	</script>
+	<link rel="stylesheet" href="chrome-extension://mhnlakgilnojmhinhkckjpncpbhabphi/content.css"><style id="_goober"> .go1475592160{height:0;}.go1671063245{height:auto;}.go1888806478{display:flex;flex-wrap:wrap;flex-grow:1;}@media (min-width:600px){.go1888806478{flex-grow:initial;min-width:288px;}}.go167266335{background-color:#313131;font-size:0.875rem;line-height:1.43;letter-spacing:0.01071em;color:#fff;align-items:center;padding:6px 16px;border-radius:4px;box-shadow:0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);}.go3162094071{padding-left:20px;}.go3844575157{background-color:#313131;}.go1725278324{background-color:#43a047;}.go3651055292{background-color:#d32f2f;}.go4215275574{background-color:#ff9800;}.go1930647212{background-color:#2196f3;}.go946087465{display:flex;align-items:center;padding:8px 0;}.go703367398{display:flex;align-items:center;margin-left:auto;padding-left:16px;margin-right:-8px;}.go3963613292{width:100%;position:relative;transform:translateX(0);top:0;right:0;bottom:0;left:0;min-width:288px;}.go1141946668{box-sizing:border-box;display:flex;max-height:100%;position:fixed;z-index:1400;height:auto;width:auto;transition:top 300ms ease 0ms,right 300ms ease 0ms,bottom 300ms ease 0ms,left 300ms ease 0ms,max-width 300ms ease 0ms;pointer-events:none;max-width:calc(100% - 40px);}.go1141946668 .notistack-CollapseWrapper{padding:6px 0px;transition:padding 300ms ease 0ms;}@media (max-width:599.95px){.go1141946668{width:100%;max-width:calc(100% - 32px);}}.go3868796639 .notistack-CollapseWrapper{padding:2px 0px;}.go3118922589{top:14px;flex-direction:column;}.go1453831412{bottom:14px;flex-direction:column-reverse;}.go4027089540{left:20px;}@media (min-width:600px){.go4027089540{align-items:flex-start;}}@media (max-width:599.95px){.go4027089540{left:16px;}}.go2989568495{right:20px;}@media (min-width:600px){.go2989568495{align-items:flex-end;}}@media (max-width:599.95px){.go2989568495{right:16px;}}.go4034260886{left:50%;transform:translateX(-50%);}@media (min-width:600px){.go4034260886{align-items:center;}}</style></head>
+	<body onload="Init()" class="UCML-BODY" leftmargin="0" topmargin="0">
+
+
+<form id="Form1" method="post" runat="server" class="ui-mobile-viewport ui-overlay-a">
+<div id="MainPanel" style="left: 0px; top: 0px; min-height: 876px;" class="UCML-MainPanel ui-page ui-page-theme-a ui-page-active hasTopBar" data-theme="a" data-role="page" data-url="MainPanel" tabindex="0">     <div data-role="header" data-theme="a" class="public-head ui-header ui-bar-a ui-header-fix" data-id="p-head" role="banner">
+<a id="topLeftMenu" class="ui-btn-left ui-btn ui-icon-back ui-btn-icon-left" onclick="window.history.back();" data-role="button" role="button">返回</a>
+         <h1 class="ui-title" role="heading" aria-level="1">计量证书查询</h1>
+     </div>
+
+<div id="VC_jlsjForm_Module" cssclass="UCML-Panel" width="100%" class="applet-module" layout="UCML.Container" style="display: block; width: 1278px; height: auto;">
+<div id="VC_jlsjForm" style="width: 1278px; height: auto; overflow: hidden; display: block;" title="" layout="UCML.Edit" class="applet-box applet-jqmtheme-a">
+    <div id="VC_jlsjFormEditPanel" class=" container">
+      <ul id="ul_VC_jlsjForm" data-role="listview" class="ui-listview">
+        <li style="TEXT-ALIGN: center" class="ui-li-static ui-body-inherit ui-first-child">
+          请输入计量证书编号或证书条码
+        </li>
+        <li class="ui-li-static ui-body-inherit">
+          <div class="ui-input-text ui-body-inherit ui-corner-all ui-shadow-inset"><input id="cx" style="BORDER-TOP: #e5e5e5 1px solid; HEIGHT: 40px; BORDER-RIGHT: #e5e5e5 1px solid; WIDTH: 100%; BORDER-BOTTOM: #e5e5e5 1px solid; BORDER-LEFT: #e5e5e5 1px solid"></div>
+        </li>
+        <li class="ui-li-static ui-body-inherit">
+          <div id="TUCMLMButton1_outer">
+            <div class="ui-btn ui-input-btn ui-corner-all ui-shadow ui-btn-active">查询<input id="TUCMLMButton1" name="TUCMLMButton1" tabindex="-1" data-iconpos="left" value="查询" ctype="UCML.MButton" type="button" bcname="BC_jlsj" vcname="VC_jlsjForm"></div>
+            <div class="ui-btn ui-input-btn ui-corner-all ui-shadow" style="display: none;">显示证书内容<input id="TUCMLMButton2" name="TUCMLMButton2" data-iconpos="left" value="显示证书内容" ctype="UCML.MButton" type="button" bcname="BC_jlsj" vcname="VC_jlsjForm"></div>
+            <span id="sid" style="FONT-SIZE: 13px; WIDTH: 100%; COLOR: red; TEXT-ALIGN: center; DISPLAY: none">
+            </span>
+          </div>
+          </li><li id="zsbhEdit_outer" data-role="fieldcontain" class="ui-field-contain ui-li-static ui-body-inherit">
+            <label for="zsbhEdit">
+              证书编号
+            </label>
+            <div class="ui-input-text ui-body-inherit ui-corner-all ui-shadow-inset"><input id="zsbhEdit" name="zsbhEdit" tabindex="0" datafld="zsbh" ctype="UCML.TextBox" type="text" readonly="" bcname="BC_jlsj" vcname="VC_jlsjForm"></div>
+          </li>
+          <li id="qymcEdit_outer" data-role="fieldcontain" class="ui-field-contain ui-li-static ui-body-inherit">
+            <label for="qymcEdit">
+              送检单位
+            </label>
+            <div class="ui-input-text ui-body-inherit ui-corner-all ui-shadow-inset"><input id="qymcEdit" name="qymcEdit" tabindex="0" datafld="qymc" ctype="UCML.TextBox" type="text" readonly="" bcname="BC_jlsj" vcname="VC_jlsjForm"></div>
+          </li>
+          <li id="yqmcEdit_outer" data-role="fieldcontain" class="ui-field-contain ui-li-static ui-body-inherit">
+            <label for="yqmcEdit">
+              计量器具名称
+            </label>
+            <div class="ui-input-text ui-body-inherit ui-corner-all ui-shadow-inset"><input id="yqmcEdit" name="yqmcEdit" tabindex="0" datafld="yqmc" ctype="UCML.TextBox" type="text" readonly="" bcname="BC_jlsj" vcname="VC_jlsjForm"></div>
+          </li>
+          <li id="xhggEdit_outer" data-role="fieldcontain" class="ui-field-contain ui-li-static ui-body-inherit">
+            <label for="xhggEdit">
+              型号/规格
+            </label>
+            <div class="ui-input-text ui-body-inherit ui-corner-all ui-shadow-inset"><input id="xhggEdit" name="xhggEdit" tabindex="0" datafld="xhgg" ctype="UCML.TextBox" type="text" readonly="" bcname="BC_jlsj" vcname="VC_jlsjForm"></div>
+          </li>
+          <li id="ccbhEdit_outer" data-role="fieldcontain" class="ui-field-contain ui-li-static ui-body-inherit">
+            <label for="ccbhEdit">
+              出厂编号
+            </label>
+            <div class="ui-input-text ui-body-inherit ui-corner-all ui-shadow-inset"><input id="ccbhEdit" name="ccbhEdit" tabindex="0" datafld="ccbh" ctype="UCML.TextBox" type="text" readonly="" bcname="BC_jlsj" vcname="VC_jlsjForm"></div>
+          </li>
+          <li id="zzcjEdit_outer" data-role="fieldcontain" class="ui-field-contain ui-li-static ui-body-inherit">
+            <label for="zzcjEdit">
+              制造单位
+            </label>
+            <div class="ui-input-text ui-body-inherit ui-corner-all ui-shadow-inset"><input id="zzcjEdit" name="zzcjEdit" tabindex="0" datafld="zzcj" ctype="UCML.TextBox" type="text" readonly="" bcname="BC_jlsj" vcname="VC_jlsjForm"></div>
+          </li>
+          <li id="sqryEdit_outer" data-role="fieldcontain" class="ui-field-contain ui-li-static ui-body-inherit">
+            <label for="sqryEdit">
+              批准人
+            </label>
+            <div class="ui-input-text ui-body-inherit ui-corner-all ui-shadow-inset"><input id="sqryEdit" name="sqryEdit" tabindex="0" datafld="sqry" ctype="UCML.TextBox" type="text" readonly="" bcname="BC_jlsj" vcname="VC_jlsjForm"></div>
+          </li>
+          <li id="shryEdit_outer" data-role="fieldcontain" class="ui-field-contain ui-li-static ui-body-inherit">
+            <label for="shryEdit">
+              核验员
+            </label>
+            <div class="ui-input-text ui-body-inherit ui-corner-all ui-shadow-inset"><input id="shryEdit" name="shryEdit" tabindex="0" datafld="shry" ctype="UCML.TextBox" type="text" readonly="" bcname="BC_jlsj" vcname="VC_jlsjForm"></div>
+          </li>
+          <li id="jdryEdit_outer" data-role="fieldcontain" class="ui-field-contain ui-li-static ui-body-inherit">
+            <label for="jdryEdit">
+              检定员
+            </label>
+            <div class="ui-input-text ui-body-inherit ui-corner-all ui-shadow-inset"><input id="jdryEdit" name="jdryEdit" tabindex="0" datafld="jdry" ctype="UCML.TextBox" type="text" readonly="" bcname="BC_jlsj" vcname="VC_jlsjForm"></div>
+          </li>
+          <li id="zqdjdjEdit_outer" data-role="fieldcontain" class="ui-field-contain ui-li-static ui-body-inherit ui-last-child">
+            <label for="zqdjdjEdit">
+              管理编号
+            </label>
+            <div class="ui-input-text ui-body-inherit ui-corner-all ui-shadow-inset"><input id="zqdjdjEdit" name="zqdjdjEdit" tabindex="0" datafld="zqdjdj" ctype="UCML.TextBox" type="text" readonly="" bcname="BC_jlsj" vcname="VC_jlsjForm"></div>
+          </li>
+        
+      </ul>
+    </div>
+    <iframe name="foot" height="5%" frameborder="" scrolling="yes/no/auto" width="100%" src="foot.html">
+    </iframe>
+  
+</div>
+</div>
+</div>
+<div class="ui-loader ui-corner-all ui-body-a ui-loader-default"><span class="ui-icon-loading"></span><h1>loading</h1></div></form>
+<script type="text/javascript">
+</script>
+
+
+
+<use-chat-gpt-ai-content-menu id="USE_CHAT_GPT_AI_ROOT_Context_Menu"></use-chat-gpt-ai-content-menu><use-chat-gpt-ai id="USE_CHAT_GPT_AI_ROOT" data-version="2.4.5" style="display: none;"></use-chat-gpt-ai><div id="message_panel" style="top: 451.5px; left: 802.5px; position: absolute; display: none;"><span class="message_text">正在装入数据,请等待......</span><span class="loading_image"><img src="Images/message_panel.gif" width="16" height="16"></span></div><max-ai-minimum-app id="USE_CHAT_GPT_AI_ROOT_Minimize_Container" data-version="2.4.5"></max-ai-minimum-app><webchatgpt-custom-element-e025bf23-35e3-4e89-9ede-5bc3b74801ce id="maxai-snackbar" style="color: rgb(255, 255, 255);"></webchatgpt-custom-element-e025bf23-35e3-4e89-9ede-5bc3b74801ce></body></html>
