--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="keywords" content="PONY    谱尼测试">
     <meta name="description" content="PONY    谱尼测试">
     <meta name="author" content="www.zhidaweb.com" />
-    <link href="/skin/css/style.css" rel="stylesheet">
-    <link href="/skin/css/swiper-bundle.min.css" rel="stylesheet">
+    <link href="skin/css/style.css" rel="stylesheet">
+    <link href="skin/css/swiper-bundle.min.css" rel="stylesheet">
     <!--<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.4/jquery.js" type="text/javascript"></script>-->
 </head>
 <body>
@@ -20,9 +20,9 @@
     <div class="swiper mySwiper">
         <div class="swiper-wrapper">
 
-            <div class="swiper-slide"><img src="/static/upload/image/20250424/1745479607174762.jpg" width="100%"></div>
+            <div class="swiper-slide"><img src="image/20250424/1745479607174762.jpg" width="100%"></div>
 
-            <div class="swiper-slide"><img src="/static/upload/image/20250424/1745479509846173.jpg" width="100%"></div>
+            <div class="swiper-slide"><img src="image/20250424/1745479509846173.jpg" width="100%"></div>
 
         </div>
         <div class="swiper-pagination"></div>
