--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="swiper-pagination"></div>
     </div>
-    <script src="/skin/js/swiper-bundle.min.js"></script>
+    <script src="skin/js/swiper-bundle.min.js"></script>
     <script>
         var swiper = new Swiper(".mySwiper", {
             loop:true,
