--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@
 <div class="adminbuy_foot">
     <p>PONY    谱尼测试证书查询系统 <a href="http://beian.miit.gov.cn" target="_blank" rel="nofllow">苏ICP12345678</a></p>
 </div>
-<script src="/skin/js/main.js"></script>
+<script src="skin/js/main.js"></script>
 </body>
 </html>
