--- a/search.html
+++ b/search.html
@@ -20,9 +20,9 @@
 	<div class="swiper mySwiper">
 	  <div class="swiper-wrapper">
 		
-		<div class="swiper-slide"><img src="/image/20250424/1745479607174762.jpg" width="100%"></div>
+		<div class="swiper-slide"><img src="image/20250424/1745479607174762.jpg" width="100%"></div>
 		
-		<div class="swiper-slide"><img src="/image/20250424/1745479509846173.jpg" width="100%"></div>
+		<div class="swiper-slide"><img src="image/20250424/1745479509846173.jpg" width="100%"></div>
 		
 	  </div>
 	  <div class="swiper-pagination"></div>
@@ -51,7 +51,7 @@
 		<dd>公司名称：衢州越马食品有限公司</dd>
 		<dd>产品名称：餐具</dd>
 		<dd>签发时间：2025 年 05 月 14 日</dd>
-		<span><img src="/image/20250424/nopic.png" height="230"><p><a href="/file/20250522/1747876902503329.pdf" download target="_blank">点击查看</a></p></span>
+		<span><img src="image/20250424/nopic.png" height="230"><p><a href="file/20250522/1747876902503329.pdf" download target="_blank">点击查看</a></p></span>
 	</dl>
 </div>
 
