--- a/search.html
+++ b/search.html
@@ -57,7 +57,7 @@
 
 
 
-<div class="back"><a href="/">返回</a></div>
+<div class="back"><a href="javascript:history.back()">返回</a></div>
 <div class="adminbuy_foot">
 	<p>PONY    谱尼测试证书查询系统 <a href="http://beian.miit.gov.cn" target="_blank" rel="nofllow">苏ICP12345678</a></p>
 </div>
