--- a/nodata.html
+++ b/nodata.html
@@ -48,7 +48,7 @@
 
 
 
-<div class="back"><a href="javascript:history.back()">返回</a></div>
+<div class="back"><a href="javascript:window.location.replace(document.referrer)">返回</a></div>
 <div class="adminbuy_foot">
 	<p>PONY    谱尼测试证书查询系统 <a href="http://beian.miit.gov.cn" target="_blank" rel="nofllow">苏ICP12345678</a></p>
 </div>
