--- a/index.html
+++ b/index.html
@@ -19,11 +19,8 @@
 <div class="adminbuy_banner">
     <div class="swiper mySwiper">
         <div class="swiper-wrapper">
-
             <div class="swiper-slide"><img src="image/20250424/1745479607174762.jpg" width="100%"></div>
-
             <div class="swiper-slide"><img src="image/20250424/1745479509846173.jpg" width="100%"></div>
-
         </div>
         <div class="swiper-pagination"></div>
     </div>
@@ -44,12 +41,10 @@
 </div>
 
 <div class="adminbuy_chaxun">
-    <form action="/?search/"  method="get">
-        <input type="hidden" name="search" >
+    <form id="searchForm">
         <ul>
-            <li><input type="text" class="abkuang" name="ext_bianhao" placeholder="报告编码" id="name" /></li>
-            <!--<li><input type="text" class="abkuang" name="ext_shoji" placeholder="手机" id="tel" /></li>-->
-            <li><input type="button" value="查询"/ class="abcha" id="adminbuycx"></li>
+            <li><input type="text" class="abkuang" name="ext_bianhao" placeholder="报告编码" id="reportNumber" /></li>
+            <li><input type="button" value="查询" class="abcha" id="adminbuycx"></li>
         </ul>
     </form>
 </div>
@@ -57,6 +52,7 @@
 <div class="adminbuy_foot">
     <p>PONY    谱尼测试证书查询系统 <a href="http://beian.miit.gov.cn" target="_blank" rel="nofllow">苏ICP12345678</a></p>
 </div>
+
 <script src="skin/js/main.js"></script>
 </body>
 </html>
