--- a/search.html
+++ b/search.html
@@ -9,21 +9,18 @@
 <meta name="author" content="www.zhidaweb.com" />
 <link href="skin/css/style.css" rel="stylesheet">
 <link href="skin/css/swiper-bundle.min.css" rel="stylesheet">
-<!--<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.4/jquery.js" type="text/javascript"></script>-->
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.4/jquery.js" type="text/javascript"></script>
 </head>
 <body>
 <div class="adminbuy_head">
-	<p>查询成功</p>
+	<p id="statusText">正在查询...</p>
 </div>
 
 <div class="adminbuy_banner">
 	<div class="swiper mySwiper">
 	  <div class="swiper-wrapper">
-		
 		<div class="swiper-slide"><img src="image/20250424/1745479607174762.jpg" width="100%"></div>
-		
 		<div class="swiper-slide"><img src="image/20250424/1745479509846173.jpg" width="100%"></div>
-		
 	  </div>
 	  <div class="swiper-pagination"></div>
 	</div>
@@ -43,23 +40,17 @@
 	</script>
 </div>
 
-
-<div class="adminbuy_jg">
-	<dl>
-		
-		<dt>证书编号：BMFHVT82858S5072</dt>
-		<dd>公司名称：驻马店市绅士餐饮管理有限公司</dd>
-		<dd>产品名称：餐具</dd>
-		<dd>签发时间：2025 年 05 月 14 日</dd>
-		<span><img src="image/20250424/nopic.png" height="230"><p><a href="file/20250522/1747876902503329.pdf" download target="_blank">点击查看</a></p></span>
+<div class="adminbuy_jg" id="resultContainer" style="display: none;">
+	<dl id="resultContent">
+		<!-- 动态内容将在这里显示 -->
 	</dl>
 </div>
-
-
 
 <div class="back"><a href="javascript:history.back()">返回</a></div>
 <div class="adminbuy_foot">
 	<p>PONY    谱尼测试证书查询系统 <a href="http://beian.miit.gov.cn" target="_blank" rel="nofllow">苏ICP12345678</a></p>
 </div>
+
+<script src="skin/js/main.js"></script>
 </body>
 </html>
