优化页面显示

--- a/search.html
+++ b/search.html
@@ -40,11 +40,15 @@
 	</script>
 </div>
 
+<!-- 搜索结果容器 -->
 <div class="adminbuy_jg" id="resultContainer" style="display: none;">
 	<dl id="resultContent">
 		<!-- 动态内容将在这里显示 -->
 	</dl>
 </div>
+
+<!-- 无数据提示 -->
+<div class="nodata" id="noDataContainer" style="display: none;">暂无数据</div>
 
 <div class="back"><a href="javascript:history.back()">返回</a></div>
 <div class="adminbuy_foot">
