--- a/search.html
+++ b/search.html
@@ -9,7 +9,7 @@
 <meta name="author" content="www.zhidaweb.com" />
 <link href="skin/css/style.css" rel="stylesheet">
 <link href="skin/css/swiper-bundle.min.css" rel="stylesheet">
-<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.4/jquery.js" type="text/javascript"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" type="text/javascript"></script>
 </head>
 <body>
 <div class="adminbuy_head">
